--- a/vanilla-editor/index.html
+++ b/vanilla-editor/index.html
@@ -1,9 +1,10 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Vanilla-Editor</title>
 </head>
 
 <body>
